--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Todo application on Vue" />
+
+		<!-- favicon image -->
+		<link
+			rel="shortcut icon"
+			href="./src/assets/icons/favicon.png"
+			type="image/x-icon"
+		/>
+		<link
+			rel="icon"
+			href="./src/assets/icons/favicon.png"
+			type="image/x-icon"
+		/>
 		<title>Todo app</title>
 	</head>
 
