--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Todo application on Vue" />
+		<meta name="robots" content="index, follow" />
+		<meta name="keywords" content="todo, Todo, todo app, Todo app" />
+		<meta property="og:image" content="./src/assets/icons/favicon.png" />
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="1036" />
+		<meta property="og:image:height" content="416" />
+
+		<!-- Google -->
+		<meta
+			name="google-site-verification"
+			content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M"
+		/>
+		<meta name="googlebot" id="googlebot" content="index, follow" />
+
+		<!-- Yandeks -->
+		<meta name="yandex-verification" content="0d98a88b237bac56" />
+		<meta
+			name="yandex-verification"
+			id="yandex-verification"
+			content="index, follow"
+		/>
+		<meta name="yandex" id="yandex" content="index, follow" />
 
 		<!-- favicon image -->
 		<link
