--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Todo application on Vue" />
 		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="todo, Todo, todo app, Todo app" />
-		<meta property="og:image" content="./src/assets/icons/favicon.png" />
+		<meta property="og:image" content="./favicon.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="1036" />
 		<meta property="og:image:height" content="416" />
@@ -28,16 +28,8 @@
 		<meta name="yandex" id="yandex" content="index, follow" />
 
 		<!-- favicon image -->
-		<link
-			rel="shortcut icon"
-			href="./src/assets/icons/favicon.png"
-			type="image/x-icon"
-		/>
-		<link
-			rel="icon"
-			href="./src/assets/icons/favicon.png"
-			type="image/x-icon"
-		/>
+		<link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
+		<link rel="icon" href="./favicon.png" type="image/x-icon" />
 		<title>Todo app</title>
 	</head>
 
