--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta name="description" content="Todo application on Vue" />
 		<meta name="robots" content="index, follow" />
 		<meta name="keywords" content="todo, Todo, todo app, Todo app" />
-		<meta property="og:image" content="./favicon.png" />
+		<meta
+			property="og:image"
+			content="https://alievs-todo-app.vercel.app/favicon.png"
+		/>
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="1036" />
 		<meta property="og:image:height" content="416" />
@@ -18,7 +21,7 @@
 		/>
 		<meta name="googlebot" id="googlebot" content="index, follow" />
 
-		<!-- Yandeks -->
+		<!-- Yandex -->
 		<meta name="yandex-verification" content="0d98a88b237bac56" />
 		<meta
 			name="yandex-verification"
